🔧 chore: 初始化开发环境

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,27 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "target": "es2022",
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
-  }
+    "jsxImportSource": "hono/jsx",
+    "lib": ["es2022"],
+    "moduleDetection": "force",
+    "baseUrl": ".",
+    "module": "NodeNext",
+    "paths": {
+      "~/*": ["./src/*"]
+    },
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "strict": true,
+    "noImplicitOverride": true,
+    "noUncheckedIndexedAccess": true,
+    "outDir": "dist",
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+    "skipLibCheck": true
+  },
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules"]
 }
