--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "api",
+  "type": "module",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "build": "tsc",
+    "dev": "bun run --hot src/index.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "prepare": "husky || true"
   },
   "dependencies": {
     "hono": "^4.6.20"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@antfu/eslint-config": "^4.1.1",
+    "@commitlint/cli": "^19.7.1",
+    "@types/bun": "^1.2.2",
+    "commitlint-config-gitmoji": "^2.3.1",
+    "eslint": "^9.19.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "prettier-plugin-packagejson": "^2.5.8",
+    "prettier-plugin-sort-json": "^4.1.1",
+    "typescript": "^5.7.3"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
